feat (backend): add mock LLM mode for testing without OpenAI API calls

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,6 @@ ACCESS_TOKEN_EXPIRE_MINUTES=60
 
 # App
 APP_ENV=development
+
+# Mock mode — set to true to test without OpenAI API calls (free)
+MOCK_LLM=true
