--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,4 +15,4 @@ ACCESS_TOKEN_EXPIRE_MINUTES=60
 APP_ENV=development
 
 # Mock mode — set to true to test without OpenAI API calls (free)
-MOCK_LLM=true
+MOCK_LLM=false
